--- a/Bonchow/Base.lproj/Main.storyboard
+++ b/Bonchow/Base.lproj/Main.storyboard
@@ -335,7 +335,8 @@ than recovering your account. Your information is secure and not shared with any
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="1Ut-yx-8aJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="linkColor"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                        <color key="tintColor" systemColor="systemOrangeColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RestaurantTableViewCell" rowHeight="221" id="hUY-vw-65H" customClass="RestaurantTableViewCell" customModule="Bonchow" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="221"/>
@@ -376,6 +377,7 @@ than recovering your account. Your information is secure and not shared with any
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <color key="tintColor" systemColor="systemOrangeColor"/>
                                     <constraints>
                                         <constraint firstItem="k6X-M2-XZf" firstAttribute="leading" secondItem="C73-Aa-V5g" secondAttribute="leadingMargin" constant="8" id="2Hj-dk-zxM"/>
                                         <constraint firstItem="bsd-Ws-a0A" firstAttribute="bottom" secondItem="C73-Aa-V5g" secondAttribute="bottomMargin" constant="8" id="82j-ZP-01E"/>
@@ -452,11 +454,14 @@ than recovering your account. Your information is secure and not shared with any
     <resources>
         <image name="background" width="1668" height="2224"/>
         <image name="logo" width="628" height="216"/>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
