--- a/Bonchow/Base.lproj/Main.storyboard
+++ b/Bonchow/Base.lproj/Main.storyboard
@@ -377,7 +377,7 @@ than recovering your account. Your information is secure and not shared with any
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KZv-i4-HQK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5912.8000000000002" y="68.7192118226601"/>
+            <point key="canvasLocation" x="5950" y="69"/>
         </scene>
         <!--Session View Controller-->
         <scene sceneID="uEb-eE-Cie">
@@ -446,7 +446,7 @@ than recovering your account. Your information is secure and not shared with any
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="42" id="XVJ-7I-YL9">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OwnerCell" rowHeight="42" id="XVJ-7I-YL9" customClass="OwnerCell" customModule="Bonchow" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="44.666666030883789" width="343" height="42"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XVJ-7I-YL9" id="sui-pF-Q8r">
@@ -462,6 +462,9 @@ than recovering your account. Your information is secure and not shared with any
                                                         </label>
                                                     </subviews>
                                                 </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="ownerLabel" destination="gZc-pt-ViD" id="ttd-ji-SIv"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                     </tableView>
@@ -495,6 +498,7 @@ than recovering your account. Your information is secure and not shared with any
                     <navigationItem key="navigationItem" id="owP-AF-CRu"/>
                     <connections>
                         <outlet property="cardView" destination="Jre-y5-G1J" id="MRz-8S-wYA"/>
+                        <outlet property="ownersTableView" destination="7y2-hl-olH" id="UUr-cA-OtJ"/>
                         <outlet property="resAddress" destination="fXq-Za-SZg" id="WHU-dh-F9d"/>
                         <outlet property="resName" destination="W2C-7d-qRB" id="BZF-zi-qCN"/>
                     </connections>
@@ -757,7 +761,6 @@ than recovering your account. Your information is secure and not shared with any
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Vtf-sB-Wfl"/>
         <segue reference="GpZ-Ko-0Is"/>
         <segue reference="vb6-G3-OhC"/>
     </inferredMetricsTieBreakers>
